--- a/app/templates/programs/admission/admission_dashboard.html
+++ b/app/templates/programs/admission/admission_dashboard.html
@@ -43,6 +43,8 @@
         <i class="fas fa-times-circle ms-1 text-danger"></i>
         {% elif state=='pending' %}
         <i class="fas fa-exclamation-circle ms-1 text-warning"></i>
+        {% elif state=='extended' %}
+        <i class="fas fa-file-circle ms-1 text-info"></i>
         {% endif %}
         {% endif %}
       </button>
